--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/laptop_project-style.css" />
-    <link rel="stylesheet" href="./CSS/mobile_project-style.css" />
-    <link rel="stylesheet" href="./CSS/tablet_project-style.css" />
+    <link rel="stylesheet" href="./laptop_project-style.css" />
+    <link rel="stylesheet" href="./mobile_project-style.css" />
+    <link rel="stylesheet" href="./tablet_project-style.css" />
     <!--Bootstrap-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
